--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 </header>
 <nav>
   <ul>
-    <li><a href="index.html">Home</a></li>
-    <li><a href="history.html">History</a></li>
-    <li><a href="settings.html">Settings</a></li>
-    <button class="button signupbutton" id="signupbutton">Sign Up</button><br>
-    <button class="button loginbutton" id="loginbutton">Log In</button>
+    <li><button class="button homebutton" id="homebutton">Home</button></li>
+    <li><button class="button historybutton" id="historybutton">History</button></li>
+    <li><button class="button settingsbutton" id="settingsbutton">Settings</button></li>
+    <li><button class="button signupbutton" id="signupbutton">Sign Up</button> </li>
+    <li><button class="button loginbutton" id="loginbutton">Log In</button></li>
   </ul>
 </nav>
 <main>
@@ -33,6 +33,7 @@
       </ul>
     </div>
     <div class="readings">
+        <h2>Choose a viewpoint</h2>
         <button class="button liberalbutton" id="liberalbutton">Liberal</button>
         <button class="button independentbutton" id="independentbutton">Independent</button>
         <button class="button conservativebutton" id="conservativebutton">Conservative</button> <br>
@@ -67,7 +68,7 @@
 </main>
 <footer>
   We could all use some Perspective. <br>
-  <a href="mailto:kbaguley24@gmail.com">Email</a>
+  <a href="mailto:kbaguley24@gmail.com">Contact</a>
 </footer>
 </div>
 <script type="text/javascript" src="app.js"></script>
