--- a/home.html
+++ b/home.html
@@ -10,7 +10,7 @@
 <body>
   <div class="wrapper">
 <header>
-  <h1><a href="index.html">Perspective</a></h1>
+  <h1><a href="home.html">Perspective</a></h1>
   <div class="glasses">
       
   </div>
