--- a/website/home.html
+++ b/website/home.html
@@ -63,7 +63,7 @@
       <input type="email" id="lemail" name="lemail">
       <label for="lpassword">Password:</label>
       <input type="password" id="lpassword" name="lpassword">
-      <button class="button signinbutton" id="signinbutton">Sign In</button>
+      <button class="button signinbutton" name="signinbutton" id="signinbutton">Sign In</button>
     </form>
 </main>
 <footer>
